...
                        android:text="@string/date_format"
                        android:textColor="@color/hint_tv_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/editTextDt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/very_light_green"
...
                        android:text="@string/time_format"
                        android:textColor="@color/hint_tv_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/editTextTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/very_light_green"
...
                        android:textColor="@color/hint_tv_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/editTextSysPressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/very_light_green"
...
                        android:textColor="@color/hint_tv_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/editTextDysPressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/very_light_green"
...
                        android:textColor="@color/hint_tv_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/editTextHeartRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/very_light_green"
...
                        android:textColor="@color/hint_tv_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/editTextComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/very_light_green"
...
                        android:textColor="@color/text_color"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <android.widget.Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_ripple_back"
                android:backgroundTint="@color/sky_blue"
                android:layout_gravity="end"
...
