<resources>
    <string name="app_name">CardiacRecorder</string>
    <string name="no_data_found">No data found</string>
    <string name="add_measurement">add measurement</string>
    <string name="unusual_dys_pressure">Unusual dys pressure</string>
    <string name="date">Date</string>
    <string name="date_format">Date (dd/MM/yyyy)</string>
    <string name="time">Time</string>
    <string name="time_format">Time (hh:mm:a)</string>
    <string name="_60">60</string>
    <string name="dys_pressure">Dys pressure</string>
    <string name="dys_pressure_mm_hg">Dys pressure (mm Hg)</string>
    <string name="sys_pressure_mm_hg">Sys pressure (mm Hg)</string>
    <string name="heart_rate_bpm">Heart Rate (BPM)</string>
    <string name="_70">70</string>
    <string name="comment">Comment</string>
    <string name="enter_any_message">Enter any message</string>
    <string name="_10_25">10:25PM</string>
    <string name="_10_11_2023">10/11/2023</string>
    <string name="save">Save</string>
    <string name="more_options">More options</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="int_ph">%1$d</string>
    <string name="search">Search</string>
    <string name="dash_only">---</string>
    <string name="search_keyword">Search key</string>
    <string name="previous_item">Previous item</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="down_arrow">Down arrow</string>
    <string name="filter">Filter</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="select_type">Select type</string>
    <string name="apply_filter">Apply filter</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="to_date">To date</string>
    <string name="from_date">From date</string>
    <string name="sort_by">Sort By</string>
    <string name="systolic_pressure">Systolic pressure</string>
    <string name="dashed_date">--/--/----</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="clock_logo">clock logo</string>
    <string name="date_logo">date logo</string>
    <string name="clear_filter">Clear filter</string>
    <string name="_88">+88</string>
    <string name="_88_ph">+88%1$s</string>
    <string name="can_t_be_empty">Can\'t be empty</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="verification_message">Please type the verification code sent to\n
        %1$s</string>
    <string name="verification_message_dummy">Please type the verification code sent to\n
        012345</string>

    <string name="date_time">%1$s at %2$s</string>
    <string name="message_icon">Message icon</string>
    <string name="otp">OTP</string>
    <string name="enter_otp_first">Enter OTP first</string>
    <string name="error_occurred">Error occurred</string>
    <string name="about_invalid_phone_number">Invalid phone number</string>
    <string name="invalid_otp_recheck_and_try_again">Invalid OTP</string>
    <string name="session_expired_try_again">Session expired. Try again later</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="_00">00</string>
    <string name="sending_otp">Sending OTP. Please wait …</string>
    <string name="verifying_otp">Verifying OTP…</string>
    <string name="phone_number_not_found">Phone number not found</string>
    <string name="about_create_account_phone_not_found">You don\'t have any account with this phone number. Please create a account first, then login</string>
    <string name="create_account">Create account</string>
    <string name="cancel">Cancel</string>
    <string name="logout">LogOut</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="please_wait">Please wait…</string>
    <string name="login">Login</string>
    <string name="failed_to_authenticate">Failed to authenticate</string>
    <string name="_01xxxxxxxxx">01XXXXXXXXX</string>
    <string name="image">image</string>
    <string name="date_and_time">Date and Time</string>
    <string name="diastolic_pressure">Diastolic pressure</string>
</resources>
